# eelink_server

./: .gitignore  .travis.yml  CMakeLists.txt  Untitled Project.SearchResults
conf/: eelink_server.ini  gps_log.conf  history_log.conf  http_log.conf  simcom_log.conf  sync_log.conf  tk115_log.conf
doc/: HTTP.MD
src/: CMakeLists.txt  Makefile  conf.c  conf.h  env.c  fsm.c  gizwits_req.c  gizwits_rsp.c  http.c  leancloud_req.c  main.c  mqtt.c  msg_proc_mc.c  object_mc.c  server_mc.c  version.h
src/3rd/MySQL-Connector-Cpp-Wrapper-Class/: mysqlconn_wrapper.h
src/3rd/MySQLConnectorWrapper/: mysqlconn_wrapper.cpp  mysqlconn_wrapper.h
src/3rd/alidayu/: CMakeLists.txt  SingleMap.c  SingleMap.h  TaobaoClient.c  TopRequest.c  WebUtils.c
src/3rd/cJSON/: CMakeLists.txt
src/common/: CMakeLists.txt  adler32.c  adler32.h  call_push.c  call_push.h  cdecode.c  cdecode.h  cell.c  cell.h  cencode.c  cencode.h  cgi2gps.c  cgi2gps.h  conf.h  curl.c  curl.h  db.c  db.h  env.c  evreq_list.c  evreq_list.h  firmware_upgrade.c  firmware_upgrade.h  http.c  http.h  inter_msg.h  jiguang_push.c  jiguang_push.h  log.c  log.h  macro.h  md5.c  md5.h  mqtt.c  mqtt.h  msg_app.c  msg_app.h  msg_http.c  msg_http.h  object.c  (+23 more)
src/gps/: CMakeLists.txt  DB.cpp  DB.h  Message.cpp  Message.h  UdpServerDataHandle.cpp  UdpServerDataHandle.h  logger.cpp  logger.h  main.cpp  mqtt_top.cpp  mqtt_top.h  protocol.h
src/histroy/: CMakeLists.txt  main.cpp  msg_proc_http.c  msg_proc_http.cpp  msg_proc_http.h  msg_proc_http.hpp  protocol_history.h
src/http/: CMakeLists.txt  device_http.c  device_http.h  gps_http.c  gps_http.h  histroy_resource.cpp  histroy_resource.h  itinerary_http.c  itinerary_http.h  main.c  main.cpp  msg_http.c  msg_http.h  msg_proc_http.c  msg_proc_http.h  package_http.c  package_http.h  session_http.c  session_http.h  telephone_http.c  telephone_http.h
src/itinerary/: CMakeLists.txt  itinerary_object.c  itinerary_object.h  main.c
src/simcom/: CMakeLists.txt  cb_ctx_simcom.h  env.c  firmware_upgrade.c  firmware_upgrade.h  http_connect_simcom.c  http_connect_simcom.h  http_simcom.c  http_simcom.h  main.c  mqtt.c  msg_manager.c  msg_manager.h  msg_proc_app.c  msg_proc_app.h  msg_proc_manager.c  msg_proc_manager.h  msg_proc_simcom.c  msg_proc_simcom.h  msg_simcom.c  msg_simcom.h  protocol.h  protocol_manager.h  server_manager.c  server_manager.h  server_simcom.c  session.h  version.h
src/sync/: CMakeLists.txt  leancloud_req.c  leancloud_req.h  leancloud_rsp.c  leancloud_rsp.h  main.c  msg_proc.c  msg_proc.h  objectIDLeancloud.c  objectIDLeancloud.h  objectID_leancloud.c  phone_alarm.c  phone_alarm.h  server_sync.c  server_sync.h  version.h  yeelink_req.c
src/tk115/: CMakeLists.txt  main.c  mqtt.c  msg_proc_app.c  msg_proc_app.h  msg_proc_tk115.c  msg_proc_tk115.h  msg_sch_tk115.c  msg_tk115.h  server_tk115.c  session.c
